<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="25.0dip"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:backgroundTint="@android:color/white">

        <np.TextView
            android:id="@+id/title"
            style="@style/text_18_ffffff"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:gravity="center"
            android:text="Noise Level"
            android:visibility="visible"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|right"
            android:backgroundTint="@android:color/white">

            <np.TextView
                android:id="@+id/message"
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_10db"
                android:textColor="@color/black"/>

            <np.TextView
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_20db"
                android:textColor="@color/black"/>

            <np.TextView
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_30db"
                android:textColor="@color/black"/>

            <np.TextView
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_40db"
                android:textColor="@color/black"/>

            <np.TextView
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_50db"
                android:textColor="@color/black"/>

            <np.TextView
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_60db"
                android:textColor="@color/black"/>

            <np.TextView
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_70db"
                android:textColor="@color/black"/>

            <np.TextView
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_80db"
                android:textColor="@color/black"/>

            <np.TextView
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_90db"
                android:textColor="@color/black"/>

            <np.TextView
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_100db"
                android:textColor="@color/black"/>

            <np.TextView
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_110db"
                android:textColor="@color/black"/>

            <np.TextView
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_120db"
                android:textColor="@color/black"/>

            <np.TextView
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_130db"
                android:textColor="@color/black"/>

            <np.TextView
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_140db"
                android:textColor="@color/black"/>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="#ffd0d0d0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal" >

            <np.Button
                android:id="@+id/negativeButton"
                style="@style/text_15_666666_sdw"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:background="#009688"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="Ok" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
