<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_page"
    android:orientation="vertical"
    android:backgroundTint="@android:color/white"
    tools:context="com.bodekjan.soundmeter.MainActivitySound">



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="406dp"

        android:layout_weight="1">

        <com.bodekjan.soundmeter.Speedometer
            android:id="@+id/speed"
            android:layout_width="268dp"
            android:layout_height="262dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/noise_disc" />

        <ImageButton
            android:id="@+id/refreshbutton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:src="@drawable/refresh" />

        <ImageButton
            android:id="@+id/infobutton"
            android:layout_width="120dp"
            android:layout_height="127dp"
            android:layout_gravity="right|bottom"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/question" />


        <ImageButton
        android:layout_width="48dp"
        android:layout_height="54dp"
        android:id="@+id/eggbutton"
        android:layout_gravity="right|center"
        android:src="@drawable/egg"
        android:background="@android:color/transparent"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:scaleType="fitCenter" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
        android:background="#009688"
            />

    </FrameLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="right"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginLeft="32dp"-->
        <!--android:layout_marginRight="32dp"-->
        <!--android:layout_weight="1"-->
        <!--android:orientation="vertical">-->

        <!--<ImageButton-->
            <!--android:id="@+id/infobutton"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="right"-->
            <!--android:layout_marginTop="32dp"-->
            <!--android:layout_marginRight="16dp"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:src="@drawable/question" />-->
    <!--</LinearLayout>-->

    <!--<LinearLayout-->
        <!--android:layout_width="90dp"-->
        <!--android:layout_height="112dp"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_gravity="left|top"-->
        <!--android:layout_marginLeft="32dp"-->
        <!--android:layout_marginRight="32dp"-->
        <!--android:layout_weight="1"-->
        <!--android:orientation="vertical">-->

        <!--<ImageButton-->
            <!--android:id="@+id/refreshbutton"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="60dp"-->
            <!--android:layout_gravity="left|top"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:layout_marginTop="32dp"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:src="@drawable/refresh" />-->
    <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="97dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_gravity="right"-->
            <!--android:orientation="vertical">-->

        <!--</LinearLayout>-->

        <!--<ImageButton-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:id="@+id/eggbutton"-->
            <!--android:layout_gravity="right|top"-->
            <!--android:src="@drawable/egg"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:visibility="gone"-->
            <!--android:scaleType="fitCenter" />-->




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <np.TextView
                android:id="@+id/minlabel"
                style="@style/Uy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_minlabel"
                android:textColor="@color/external_progress2" />

            <TextView
                android:id="@+id/minval"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:text="23 Db"
                android:textColor="#ffffff"
                android:textSize="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible">>

            <np.TextView
                android:id="@+id/avglabel"
                style="@style/Uy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_avglabel"
                android:textColor="@color/external_progress2" />

            <TextView
                android:id="@+id/mmval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23 Db"
                android:textColor="#ffffff"
                android:textSize="36dp" />

            <!--<LinearLayout-->
                <!--android:layout_width="255dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:orientation="vertical"></LinearLayout>-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible">>

            <np.TextView
                android:id="@+id/maxlabel"
                style="@style/Uy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_maxlabel"
                android:textColor="@color/external_progress2" />

            <TextView
                android:id="@+id/maxval"
                android:layout_width="74dp"
                android:layout_height="28dp"
                android:text="23 Db"
                android:textColor="#ffffff"
                android:textSize="36dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible">>

            <np.TextView
                android:id="@+id/curlabel"
                style="@style/Uy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_curlabel"
                android:textColor="@color/external_progress2" />

            <TextView
                android:id="@+id/curval"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="23 Db"
                android:textColor="#ffffff"
                android:textSize="36dp" />
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/chartcontainer"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart1"
            android:layout_width="395dp"
            android:layout_height="192dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />
    </RelativeLayout>

</LinearLayout>
